--- a/index.ipynb
+++ b/index.ipynb
@@ -127,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = mexico # 'Italy'\n",
     "italy"
    ]
   },
